...
    content: @Composable (PaddingValues) -> Unit
) {
    Scaffold(
        snackbarHost = { SnackbarHost(snackbarHostState) },
        topBar = {
            TopAppBar(
                title = { Text("My Catalogs") },
                navigationIcon = {
                    if (showNavigationIcon) {
                        IconButton(onClick = callbacks.onBack) {
                            Icon(
                                imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                                contentDescription = "Back"
                            )
                        }
                    }
                },
                colors = TopAppBarDefaults.topAppBarColors(
                    containerColor = MaterialTheme.colorScheme.primaryContainer,
...
            FloatingActionButton(
                onClick = callbacks.onCreateCatalogClick,
                containerColor = MaterialTheme.colorScheme.primary
            ) {
                Icon(
                    Icons.Outlined.Add,
                    contentDescription = "Add Catalog",
                    tint = MaterialTheme.colorScheme.onPrimary
                )
            }
        }
    ) { paddingValues -> content(paddingValues) }
}
...
                        onCreate(state.name.trim())
                    } else {
                        onDismiss()
                    }
                }
            ) {
                Text("Create")
            }
        },
        dismissButton = {
            TextButton(onClick = onDismiss) {
                Text("Cancel")
            }
        },
        title = { Text("New Catalog") },
        text = {
            OutlinedTextField(
                value = state.name,
                onValueChange = { state.updateName(it) },
                label = { Text("Catalog Name") },
                singleLine = true,
                modifier = Modifier.fillMaxWidth()
            )
        }
    )
}
...
