...
        Icon(
            imageVector = Icons.Outlined.Collections,
            contentDescription = null,
            tint = MaterialTheme.colorScheme.onSecondaryContainer,
            modifier = Modifier.padding(end = 8.dp)
        )
        Text(text = "View Catalogs")
    }
}

@Composable
private fun StatsRow(
    observations: Int,
...
